--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<link rel="icon" type="image/png" href="/images/logo-192.jpg" sizes="192x192">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="keywords" content="清水救生隊, 泳訓班, 海訓, 溪訓, 紅十字會, 喵咪" />
-		<meta name="description" content="He Said One Day You'll Leave This World Behind. So Live a Life you Will Remember" />
+		<meta name="description" content="新北市清水救生隊，擁有專業的教練團，以及充滿熱忱的助教們，是您成為救生員的好選擇。" />
     	<meta property="og:title" content="清水救生隊" />
-    	<meta property="og:description" content="He Said One Day You'll Leave This World Behind. So Live a Life you Will Remember" />
+    	<meta property="og:description" content="新北市清水救生隊，擁有專業的教練團，以及充滿熱忱的助教們，是您成為救生員的好選擇。" />
     	<meta property="og:image" content="https://lifeguard.sean.taipei/images/logo.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
@@ -29,7 +29,7 @@
 				<h1><strong>清水救生隊</strong> 活動簡介</h1>
 				<nav>
 					<ul>
-						<li><a href="#footer" class="icon fa fa-info-circle">聯絡資訊</a></li>
+						<li><a href="#footer" class="icon fa fa-info-circle">加入我們</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -39,62 +39,65 @@
 				<article class="thumb">
 					<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
 					<h2>救生員訓練班</h2>
-					<p>每年暑假，都有新血注入清水隊，學長姐們熱心教學</p>
+					<p>每年暑假，都有新血注入清水隊，除了教練團教導，也有許多學長姐們，自發性的回來提攜後輩</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 					<h2>萬里海訓</h2>
-					<p>0u0</p>
+					<p>參加救生泳訓班的第三週，假日一齊到萬里海邊，體驗器材實際操作、練習救生技巧</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
 					<h2>淨灘活動</h2>
-					<p>0u0</p>
+					<p>作為公益性團體，保握海訓機會，協助讓環境變得更加美好</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
 					<h2>室內急救課程</h2>
-					<p>0u0</p>
+					<p>當救生員的必要資格之一，就是取得急救員證了<br>
+					每期救生班，都會有三天的室內課，教授實用的急救、包紮技術，以及相關法律常識</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="" /></a>
-					<h2>初級班</h2>
-					<p>0u0</p>
+					<h2>初級泳訓班</h2>
+					<p>除了精實的救生班外，清水隊每年會開設成人泳訓班<br>
+					經過兩週的基礎課程後，讓您學會游泳、不再怕水</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
 					<h2>小小救生班</h2>
-					<p>0u0</p>
+					<p>每天早起游泳，養成小孩規律的生活</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-					<h2>八仙橋協勤</h2>
-					<p>0u0</p>
+					<h2>大豹溪協勤</h2>
+					<p>為了分攤消防弟兄的負擔，每年暑假玩水旺季，隊員都會於假日輪班至八仙橋協助警消勤務，並達成數年的零死亡人數成績</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
 					<h2>十式精進班</h2>
-					<p>0u0</p>
+					<p>短短一個月的救生班，多數人已經學會救生四式<br>
+					對於想要精進泳技的你，可以參加十式班微調動作，打好紮實的基本功</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-					<h2>身心障礙游泳</h2>
-					<p>0u0</p>
+					<h2>身障游泳比賽</h2>
+					<p>一年一度的慧行杯身障游泳比賽，都有熱心的隊員們戒護，保護這群天使們</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
-					<h2>會員大會</h2>
-					<p>0u0</p>
+					<h2>年度會員大會</h2>
+					<p>下轄紅十字總會的清水救生隊，每年會例行性的招開會員大會，回顧一年來的精彩點滴</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
 					<h2>新科教練授帽</h2>
-					<p>0u0</p>
+					<p>除了畢業的學長姐擔任助教外，也有些熱心志工會進入教練班受訓，帶給學員更優質的教學內容</p>
 				</article>
 				<article class="thumb">
 					<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
 					<h2>理監事會議</h2>
-					<p>0u0</p>
+					<p>反正就某種會議，我也不知道那是什麼</p>
 				</article>
 			</div>
 
@@ -103,16 +106,20 @@
 				<div class="inner split">
 					<div>
 						<section>
-							<h2>如何加入</h2>
-							<p>歡迎聯絡我們，或是直接來泳池詢問</p>
+							<h2>如何參與</h2>
+							<p>清水救生隊期待您的加入，經過一個月的訓練，學會救溺、自救技巧，成為親友們一輩子的守護神</p>
+							<p>歡迎直接來泳池詢問，或是透過以下管道與我們聯絡</p>
+							<p>* 這裡可以寫什麼，請讓我知道</p>
 						</section>
+					</div>
+					<div>
 						<section>
 							<h2>立即加入清水大家庭</h2>
 							<ul class="icons">
 								<li><a target="_blank" href="https://t.me/SeanChannel" class="icon fab fa-telegram"><span class="label">Telegram</span></a></li>
 								<li><a target="_blank" href="https://fb.com/349426416046/" class="icon fab fa-facebook"><span class="label">Facebook Page</span></a></li>
 								<li><a target="_blank" href="https://fb.com/436696979716143" class="icon fa fa-users"><span class="label">Facebook Group</span></a></li>
-								<li><a href="#" class="icon fab fa-line"><span class="label">LINE</span></a></li>
+								<!-- <li><a href="#" class="icon fab fa-line"><span class="label">LINE</span></a></li> -->
 							</ul>
 						</section>
 						<p class="copyright">
@@ -125,7 +132,7 @@
 
 		<!-- Scripts -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.poptrox/2.5.1/jquery.poptrox.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
