--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html lang="zh-TW">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -36,65 +31,65 @@
 			<!-- Main -->
 			<div id="main">
 				<article class="thumb">
-					<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="救生員訓練班" /></a>
 					<h2>救生員訓練班</h2>
 					<p>每年暑假，都有新血注入清水隊，除了教練團教導，也有許多學長姐們，自發性的回來提攜後輩</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="萬里海訓" /></a>
 					<h2>萬里海訓</h2>
 					<p>參加救生泳訓班的第三週，假日一齊到萬里海邊，體驗器材實際操作、練習救生技巧</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+					<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="淨灘活動" /></a>
 					<h2>淨灘活動</h2>
 					<p>作為公益性團體，保握海訓機會，協助讓環境變得更加美好</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+					<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="室內急救課程" /></a>
 					<h2>室內急救課程</h2>
 					<p>當救生員的必要資格之一，就是取得急救員證了<br>
 					每期救生班，都會有三天的室內課，教授實用的急救、包紮技術，以及相關法律常識</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="" /></a>
+					<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="初級泳訓班" /></a>
 					<h2>初級泳訓班</h2>
 					<p>除了精實的救生班外，清水隊每年會開設成人泳訓班<br>
 					經過兩週的基礎課程後，讓您學會游泳、不再怕水</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+					<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="小小救生班" /></a>
 					<h2>小小救生班</h2>
 					<p>每天早起游泳，養成小孩規律的生活</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="大豹溪協勤" /></a>
 					<h2>大豹溪協勤</h2>
 					<p>為了分攤消防弟兄的負擔，每年暑假玩水旺季，隊員都會於假日輪班至八仙橋協助警消勤務，並達成數年的零死亡人數成績</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+					<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="十式精進班" /></a>
 					<h2>十式精進班</h2>
 					<p>短短一個月的救生班，多數人已經學會救生四式<br>
 					對於想要精進泳技的你，可以參加十式班微調動作，打好紮實的基本功</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+					<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="身障游泳比賽" /></a>
 					<h2>身障游泳比賽</h2>
 					<p>一年一度的慧行杯身障游泳比賽，都有熱心的隊員們戒護，保護這群天使們</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
+					<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="年度會員大會" /></a>
 					<h2>年度會員大會</h2>
 					<p>下轄紅十字總會的清水救生隊，每年會例行性的招開會員大會，回顧一年來的精彩點滴</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+					<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="新科教練授帽" /></a>
 					<h2>新科教練授帽</h2>
 					<p>除了畢業的學長姐擔任助教外，也有些熱心志工會進入教練班受訓，帶給學員更優質的教學內容</p>
 				</article>
 				<article class="thumb">
-					<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
+					<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="理監事會議" /></a>
 					<h2>理監事會議</h2>
 					<p>反正就某種會議，我也不知道那是什麼</p>
 				</article>
@@ -115,9 +110,9 @@
 						<section>
 							<h2>立即加入清水大家庭</h2>
 							<ul class="icons">
-								<li><a target="_blank" href="https://t.me/SeanChannel" class="icon fab fa-telegram"><span class="label">Telegram</span></a></li>
-								<li><a target="_blank" href="https://fb.com/349426416046/" class="icon fab fa-facebook"><span class="label">Facebook Page</span></a></li>
-								<li><a target="_blank" href="https://fb.com/436696979716143" class="icon fa fa-users"><span class="label">Facebook Group</span></a></li>
+								<li><a target="_blank" href="https://t.me/SeanChannel" class="icon fab fa-telegram"> <span class="label">Telegram</span></a></li>
+								<li><a target="_blank" href="https://fb.com/349426416046/" class="icon fab fa-facebook"> <span class="label">Facebook Page</span></a></li>
+								<li><a target="_blank" href="https://fb.com/436696979716143" class="icon fa fa-users"> <span class="label">Facebook Group</span></a></li>
 								<!-- <li><a href="#" class="icon fab fa-line"><span class="label">LINE</span></a></li> -->
 							</ul>
 						</section>
