--- a/index.html
+++ b/index.html
@@ -93,6 +93,73 @@
 					<h2>理監事會議</h2>
 					<p>反正就某種會議，我也不知道那是什麼</p>
 				</article>
+				<article class="thumb">
+					<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="獲頒感謝狀" /></a>
+					<h2>獲頒感謝狀</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt="龍舟戒護" /></a>
+					<h2>龍舟戒護</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="春季旅遊" /></a>
+					<h2>春季旅遊</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/22.jpg" class="image"><img src="images/thumbs/22.jpg" alt="教練先修班" /></a>
+					<h2>教練先修班</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/26.jpg" class="image"><img src="images/thumbs/26.jpg" alt="淨港祈福" /></a>
+					<h2>淨港祈福</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/27.jpg" class="image"><img src="images/thumbs/27.jpg" alt="大豹溪場勘" /></a>
+					<h2>大豹溪場勘</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/28.jpg" class="image"><img src="images/thumbs/28.jpg" alt="結訓餐會" /></a>
+					<h2>結訓餐會</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/32.jpg" class="image"><img src="images/thumbs/32.jpg" alt="水考" /></a>
+					<h2>水考</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/.jpg" class="image"><img src="images/thumbs/33.jpg" alt="結訓慶祝" /></a>
+					<h2>結訓慶祝</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/36.jpg" class="image"><img src="images/thumbs/36.jpg" alt="溪訓長泳" /></a>
+					<h2>溪訓長泳</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/38.jpg" class="image"><img src="images/thumbs/38.jpg" alt="溪訓操艇" /></a>
+					<h2>溪訓操艇</h2>
+					<p></p>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/39.jpg" class="image"><img src="images/thumbs/39.jpg" alt="獨木舟操練" /></a>
+					<h2>獨木舟操練</h2>
+					<p></p>
+				</article>
+				<!--
+				<article class="thumb">
+					<a href="images/fulls/23.jpg" class="image"><img src="images/thumbs/23.jpg" alt="橫渡日月潭" /></a>
+					<h2>橫渡日月潭</h2>
+					<p></p>
+				</article>
+				-->
 			</div>
 
 			<!-- Footer -->
@@ -100,13 +167,22 @@
 				<div class="inner split">
 					<div>
 						<section>
-							<h2>如何參與</h2>
-							<p>清水救生隊期待您的加入，經過一個月的訓練，學會救溺、自救技巧，成為親友們一輩子的守護神</p>
-							<p>歡迎直接來泳池詢問，或是透過以下管道與我們聯絡</p>
-							<p>* 這裡可以寫什麼，請讓我知道</p>
+							<h2>開班資訊</h2>
+							<p>每年暑假，開設多種泳訓班，適合各年齡層參與</p>
+							<h3>救生員訓練班 <small>(七月)</small></h3>
+							<p>經由一個月的訓練，學會救生四式，學會救溺、自救技巧，成為親友們一輩子的守護神</p>
+							<h3>小小救生班 <small>(八月)</small></h3>
+							<p>為宣導防溺自救觀念，特別開設此班供國中小學童參與</p>
+							<h3>成人初級班 <small>(六月、八月)</small></h3>
+							<p>兩週的訓練，讓您不再害怕溺水</p>
 						</section>
 					</div>
 					<div>
+						<section>
+							<h2>如何參與</h2>
+							<p>經過救生班洗禮，成為隊上的一份子後，更有許多精彩活動等著您</p>
+							<p>清水救生隊期待您的加入，歡迎直接來泳池詢問，或是透過以下管道與我們聯絡</p>
+						</section>
 						<section>
 							<h2>立即加入清水大家庭</h2>
 							<ul class="icons">
